# maspy

./: .gitignore  README.md  environment.yml  setup.cfg
examples/: master_m4a.py  master_mp3.py
ffmpeg/: ffmpeg.exe goes here.txt
maspy/: __init__.py  app.py  main.py  process.py  utils.py
