[metadata]
name = maspy
version = 0.1
author = Erik van Onselen
description = Audio conversion & mastering
long_description = Convert audio and automatically master songs based on a reference track
url = https://github.com/erikgeo/maspy

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10, <3.11
install_requires =
    pydub
    matchering
    tqdm

[options.extras_require]
test = pytest